syntax = "proto3";
package esgobservabilitydemo.esgobservabilitydemo;

option go_package = "esg-observability-demo/x/esgobservabilitydemo/types";

message Transportation {
  uint64 id = 1;
  string transportationType = 2; 
  string fuelUse = 3; 
  string emissions = 4; 
  string creator = 5;
}
